fixed header text and removed collapse feature

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,5 +23,5 @@
     right: 200px;
     width: 35px;
     background:none;
-    color:white;
+    text-shadow: 1px 1px 2px black, 0 0 25px #67c0fc, 0 0 5px rgb(89, 0, 116) !important;
 }
